--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,89 @@
-<p>footer works!</p>
+<footer>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-4 col-md-6">
+        <h3>Site Map</h3>
+        <ul class="list-unstyled three-column">
+          <li>Home</li>
+          <li>Services</li>
+          <li>About</li>
+          <li>Code</li>
+          <li>Design</li>
+          <li>Host</li>
+          <li>Contact</li>
+          <li>Company</li>
+        </ul>
+      </div>
+
+      <div class="col-lg-4 col-md-6">
+        <h3>Latest Articles</h3>
+        <div class="d-flex">
+          <div class="media m-1">
+            <a href="https://web.growcast.io/" class="pull-left">
+              <img
+                src="https://media.licdn.com/dms/image/C4E0BAQFkdaAqJSU8rw/company-logo_200_200/0/1630626603559/growcast_io_logo?e=1712188800&v=beta&t=U7kAwKfzAaxp02kCt0wJ8gpTxU4egdvGjTR0qZyXg-0"
+                style="border: 2px solid white"
+                alt=""
+                class="media-object"
+                width="70"
+              />
+            </a>
+            <div class="media-body">
+              <h4 class="media-heading">Growcast</h4>
+            </div>
+          </div>
+
+          <div class="media m-1">
+            <a href="https://ceis.ar/" class="pull-left">
+              <img
+                src="https://scontent.fros2-1.fna.fbcdn.net/v/t39.30808-6/308648980_154016187267548_8938396034862272119_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=efb6e6&_nc_eui2=AeFz6rBz1Jds9SNfeElz6vLKRY3VKTtGAHBFjdUpO0YAcPwBKTT-cxV7YRVK9rptbzg&_nc_ohc=hqINECg1CE4AX-QWOP3&_nc_ht=scontent.fros2-1.fna&oh=00_AfDW48-5McZrM-ee6vKOw5F0X7uMlVv5QsMvJHCBeiRugQ&oe=65958142"
+                alt=""
+                class="media-object"
+                style="border: 2px solid white"
+                width="70"
+              />
+            </a>
+            <div class="media-body">
+              <h4 class="media-heading">CEIS</h4>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4">
+        <h3>Our Work</h3>
+        <a href="https://ibb.co/G2K7cHK"
+          ><img
+            style="height: 100px; width: 150px; border: 2px solid white"
+            class="img-thumbnail m-1"
+            src="https://i.ibb.co/C7kBhPk/DSC-3080.jpg"
+            alt="DSC-3080"
+        /></a>
+        <a href="https://ibb.co/ch58sK6"
+          ><img
+            style="height: 100px; width: 150px; border: 2px solid white"
+            src="https://i.ibb.co/gZ1WcbS/DSC-3040.jpg"
+            class="img-thumbnail m-1"
+            alt="DSC-3040"
+        /></a>
+        <a href="https://ibb.co/4P8pDbZ"
+          ><img
+            style="height: 100px; width: 150px; border: 2px solid white"
+            class="img-thumbnail m-1"
+            src="https://i.ibb.co/9sbWfx9/DSC-2940.jpg"
+            alt="DSC-2940"
+        /></a>
+        <a href="https://ibb.co/30PBcJ3"
+          ><img
+            style="height: 100px; width: 150px; border: 2px solid white"
+            class="img-thumbnail m-1"
+            src="https://i.ibb.co/55JBL70/DSC-3016.jpg"
+            alt="DSC-3016"
+        /></a>
+      </div>
+    </div>
+  </div>
+  <div class="copyright text-center">
+    Copyright &copy; 2023 <span> NORA </span>
+  </div>
+</footer>
