--- a/src/app/views/blog/blog.component.html
+++ b/src/app/views/blog/blog.component.html
@@ -1,7 +1,14 @@
 <div class="container">
-
-<div class="w-100 m-3">
+  <div class="w-100 d-flex justify-content-end">
     <h2 class="titulo">Blog</h2>
   </div>
 
+  <hr />
+
+  <div
+    class="d-flex flex-column w-100 justify-content-center align-items-center"
+  >
+    <mat-icon class="m-1">build</mat-icon>
+    <h2>EN CONSTRUCCION</h2>
+  </div>
 </div>
