--- a/src/app/views/nosotros/nosotros.component.html
+++ b/src/app/views/nosotros/nosotros.component.html
@@ -1,27 +1,37 @@
 <div class="container">
-    <div class="w-100 d-flex ">
-        <h2 class="titulo">Nosotros</h2>
+  <div class="w-100 d-flex justify-content-end">
+    <h2 class="titulo">Nosotros</h2>
+  </div>
+
+  <hr />
+
+  <div class="m-4">
+    <div class="w-100 d-flex align-items-center">
+      <div class="w-50">
+        <h1>NORA</h1>
+        <h3 style="font-style: italic">
+          «...surge de un arduo trabajo de investigación y desarrollo de más de
+          4 años, a través de asociaciones civiles y médicos especializados en
+          endocannabinología, llegamos a una línea terapéutica adaptada a las
+          necesidades de cada usuario, buscando potenciar la calidad de vida de
+          aquellos que sufren patologias suceptibles de tratarse con cannabis.»
+        </h3>
       </div>
-    <div class="m-5">
-        <div class="w-100 d-flex">
-            <div class="w-50">
-                <h3>Un compendio que encapsula nuestra dedicación y compromiso hacia
-                    el cannabis medicinal de calidad superior. Fusionamos la experiencia médica
-                    con la potencia del cannabis para crear fitoderivados trazados y testeados.</h3>
-                <h3>Nuestro enfoque es claro: proveer soluciones naturales y eficaces para
-                    el bienestar, comprometidos con la calidad, la seguridad y la salud.</h3>
-            </div>
-            <div class="w-50 d-flex justify-content-center">
-                <h2>ACA VA 1 IMAGEN</h2>
-            </div>
-        </div>
+      <div class="w-50 d-flex justify-content-center"></div>
     </div>
-    <div class="text-center">
-        <h3>NORA representa la sinergia entre la ciencia y la naturaleza, cuidadosamente
-            guiada por profesionales médicos y expertos en la materia. Nuestros fitoderivados
-            son probados y respaldados por la investigación, con el fin de ofrecer a nuestros
-            pacientes una experiencia confiable y auténtica.</h3>
-            <h2 class="titulo">Bienvenidos a Nora: donde la ciencia, la naturaleza y el compromiso se unen para 
-                un bienestar elevado</h2>
-    </div>
+  </div>
+  <div class="text-start">
+    <h3 class="mt-5">
+      Se encuentran trazados desde su origen. Conocemos en detalle cada uno de
+      los procesos realizados, hasta que NORA llega a tu hogar, y es por esto
+      que sabemos que podemos ayudar a cada usuario de cannabis medicinal.
+      Contando con una línea de productos adaptados a tus necesidades.
+    </h3>
+    <h3 class="mb-4">
+      Nuestros productos tienen objetivos específicos y sus concentraciones así
+      lo disponen, buscamos generar una nueva visión en la terapéutica a base de
+      cannabis, donde no todo es lo mismo y se busca generar la mejor versión
+      para cada patología o sintomatología.
+    </h3>
+  </div>
 </div>
