--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,40 +1,49 @@
-<nav class="navbar navbar-expand-lg bg-light">
-    <div class="container-fluid">
-      <img class="rounded" src="https://i.postimg.cc/d3ZsW-WRJ/logonora.png" alt="" style="width: 8rem;">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse w-100" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex justify-content-around w-100">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">
-              <i class="bi bi-house-door-fill"></i>
-              Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">
-              <i class="bi bi-shop"></i>
-              Tienda</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">
-              <i class="bi bi-clipboard2-data"></i>
-              Analíticas</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">
-              <i class="bi bi-person-arms-up"></i>
-              Nosotros</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">
-              <i class="bi bi-telephone"></i>
-              Contacto</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Blog</a>
-          </li>
-        </ul>
-      </div>
+<nav class="navbar navbar-expand-lg bg-light" style="min-height: 7rem;">
+  <div class="container-fluid align-items-center">
+    <img class="" src="https://i.postimg.cc/d3ZsW-WRJ/logonora.png" alt="" style="width: 8rem; border-radius: 1rem;">
+    <button class="navbar-toggler border-0 m-0" type="button" data-bs-toggle="collapse"
+      data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+      aria-label="Toggle navigation">
+      <img src="https://i.ibb.co/5RVfDLR/Recurso-10.png" alt="Recurso-10"
+        style="width: 2.5rem ; border-radius: 0.5rem;" />
+    </button>
+    <div class="collapse navbar-collapse w-100" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex justify-content-around w-100">
+        <li class="nav-item">
+          <button mat-stroked-button color="basic" routerLink="/"><a class="nav-link text-black" aria-current="page">
+              <i class="bi bi-house-door-fill border rounded p-1"></i>
+              Inicio</a></button>
+        </li>
+        <li class="nav-item">
+          <button mat-stroked-button color="basic" routerLink="/tienda"><a class="nav-link text-black active"
+              aria-current="page">
+              <i class="bi bi-shop border rounded p-1"></i>
+              Tienda</a></button>
+        </li>
+        <li class="nav-item">
+          <button mat-stroked-button color="basic" data-bs-toggle="collapse" routerLink="/analiticas"> <a
+              class="nav-link text-black active" aria-current="page">
+              <i class="bi bi-clipboard2-data border rounded p-1"></i>
+              Analíticas</a></button>
+        </li>
+        <li class="nav-item">
+          <button mat-stroked-button color="basic" routerLink="/nosotros"><a class="nav-link text-black active"
+              aria-current="page">
+              <i class="bi bi-person-arms-up border rounded p-1"></i>
+              Nosotros</a></button>
+        </li>
+        <li class="nav-item">
+          <button mat-stroked-button color="basic" routerLink="/contacto"> <a class="nav-link text-black active"
+              aria-current="page">
+              <i class="bi bi-telephone border rounded p-1"></i>
+              Contacto</a></button>
+        </li>
+        <li class="nav-item">
+          <button mat-stroked-button routerLink="/blog"><a class="nav-link text-black active"
+              aria-current="page">Blog</a>
+          </button>
+        </li>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
