--- a/src/app/views/contacto/contacto.component.html
+++ b/src/app/views/contacto/contacto.component.html
@@ -1,29 +1,58 @@
 <div class="container">
+  <div class="w-100 d-flex justify-content-end">
+    <h2 class="titulo">Contacto</h2>
+  </div>
 
-    <div class="w-100 d-flex ">
-        <h2 class="titulo">Contacto</h2>
-    </div>
-    <div class="w-100 d-flex justify-content-center">
+  <hr />
+  <div class="w-100 d-flex justify-content-center">
+    <mat-card class="bg-light">
+      <mat-card-content>
+        <div class="formcontenedor">
+          <form action="" class="d-flex flex-column mt-4 bg-light">
+            <mat-form-field class="example-full-width">
+              <input
+                matInput
+                placeholder="Email"
+                [formControl]="emailFormControl"
+                [errorStateMatcher]="matcher"
+              />
+              <mat-error *ngIf="!emailFormControl.hasError('required')">
+                Please enter a valid email address
+              </mat-error>
+              <mat-error *ngIf="emailFormControl.hasError('required')">
+                Email is <strong>required</strong>
+              </mat-error>
+            </mat-form-field>
+            <mat-form-field class="example-full-width">
+              <input
+                matInput
+                placeholder="Nombre"
+                [formControl]="nombreFormControl"
+                [errorStateMatcher]="matcher"
+              />
 
+              <mat-error *ngIf="nombreFormControl.hasError('required')">
+                Nombre is <strong>required</strong>
+              </mat-error>
+            </mat-form-field>
+            <mat-form-field class="example-full-width" color="accent">
+              <textarea
+                [formControl]="mensajeFormControl"
+                matInput
+                placeholder="Mensaje"
+                rows="5"
+              ></textarea>
 
-
-        <div class="w-50">
-            <form action="" class="d-flex flex-column mt-4">
-                <mat-form-field class="example-full-width" color="accent">
-                    <mat-label>Nombre</mat-label>
-                    <input matInput placeholder="" value="">
-                </mat-form-field>
-                <mat-form-field class="example-full-width" color="accent">
-                    <mat-label>Email</mat-label>
-                    <input matInput placeholder="" value="">
-                </mat-form-field>
-                <mat-form-field class="example-full-width" color="accent">
-                    <mat-label>Mensaje</mat-label>
-                    <textarea matInput placeholder="" rows="5"></textarea>
-                </mat-form-field>
-                <div class="w-100 d-flex justify-content-center">
-                    <button class="w-50 m-3" mat-raised-button>Enviar</button>
-                </div>
-            </form>
+              <mat-error *ngIf="mensajeFormControl.hasError('required')">
+                Mensaje is <strong>required</strong>
+              </mat-error>
+            </mat-form-field>
+            <div class="w-100 d-flex justify-content-center">
+              <button class="w-50 m-3" mat-raised-button>Enviar</button>
+            </div>
+          </form>
         </div>
-    </div>
+      </mat-card-content>
+    </mat-card>
+  </div>
+</div>
