--- a/src/app/views/inicio/inicio.component.css
+++ b/src/app/views/inicio/inicio.component.css
@@ -1,48 +1,63 @@
 h1 {
-    margin-top: 10rem;
-    font-size: 2.6rem;
-    font-weight: 500;
+  margin-top: 3rem;
+  font-size: 2.3rem;
+  font-weight: 500;
 }
 
+.banner {
+  max-width: 100%;
+}
 
+.expo {
+  font-size: 6rem;
+}
 
 h3 {
-    font-size: 1.5rem;
-    font-style: italic;
+  font-size: 1.5rem;
+  font-style: italic;
 }
 
 .card {
-    width: 44rem;
+  width: 44rem;
 }
 
 .imgg {
-    height: 30rem;
-    width: 100%;
-    object-fit: contain; /* Escala la imagen manteniendo la relación de aspecto y cubriendo el área disponible */
+  height: 26rem;
+  width: 100%;
+  border-radius: 1rem;
 }
 
 .card-img-top {
-    width: 100%;
-    height: 14rem;
-    border-radius: 1rem;
-    margin: 1rem;
-
+  width: 100%;
+  height: 14rem;
+  border-radius: 1rem;
+  margin: 1rem;
 }
 
-
 .mat-fab {
-    position: fixed;
+  position: fixed;
   bottom: 2rem; /* Ajusta la distancia desde la parte inferior según tus necesidades */
   left: 2rem;
   z-index: 1000;
 }
 
 .titulo {
-    font-size: 2.3rem;
-    margin-top: 3rem;
+  font-size: 2.3rem;
+  margin-top: 3rem;
 }
 
 .title {
-    font-size: 3rem;
+  font-size: 3rem;
 }
 
+@media only screen and (max-width: 767px) {
+  .banner {
+    width: 100%;
+    height: 11rem;
+  }
+  .imgg {
+    height: 12rem;
+    width: 100%;
+    border-radius: 1rem;
+  }
+}
