[FEAT] animations & inicio ui

--- a/src/app/views/inicio/inicio.component.html
+++ b/src/app/views/inicio/inicio.component.html
@@ -1,21 +1,29 @@
 <div class="container">
-  <div class="w-100 d-flex justify-content-end">
+  <div class="w-100 d-flex">
     <h2 class="titulo">Inicio</h2>
   </div>
-
-  <hr />
 
   <div
     class="d-flex flex-column w-100 justify-content-center align-items-center"
   >
-    <div class="text-center w-100 d-flex flex-column" style="color: whitesmoke">
-      <h1 class="text-white">Terapia basada en plantas</h1>
-      <h3 class="m-4">
-        Nuestros productos contienen
-        <b style="color: #a3afd2">diferentes perfiles</b> de cannabinoides para
-        el tratamiento de diversas patologías. Te invitamos a explorar nuestro
-        catálogo.
-      </h3>
+    <div
+      class="text-center w-100 d-flex align-items-center mb-3"
+      style="color: whitesmoke"
+    >
+      <div class="w-50 text-white" [@enterState]>
+        <h1 style="font-size: 7rem">NORA</h1>
+      </div>
+      <div class="w-50">
+        <h1 class="text-white" [@enterStateTwo]>Terapia basada en plantas</h1>
+        <hr />
+
+        <h3 class="m-4">
+          Nuestros productos contienen
+          <b style="color: #a3afd2">diferentes perfiles</b> de cannabinoides
+          para el tratamiento de diversas patologías. Te invitamos a explorar
+          nuestro catálogo.
+        </h3>
+      </div>
     </div>
   </div>
 
