ui inicio && admin

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -36,7 +36,7 @@
           <div class="media m-1">
             <a href="https://ceis.ar/" class="pull-left">
               <img
-                src="https://scontent.fros2-1.fna.fbcdn.net/v/t39.30808-6/308648980_154016187267548_8938396034862272119_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=efb6e6&_nc_eui2=AeFz6rBz1Jds9SNfeElz6vLKRY3VKTtGAHBFjdUpO0YAcPwBKTT-cxV7YRVK9rptbzg&_nc_ohc=hqINECg1CE4AX-QWOP3&_nc_ht=scontent.fros2-1.fna&oh=00_AfDW48-5McZrM-ee6vKOw5F0X7uMlVv5QsMvJHCBeiRugQ&oe=65958142"
+                src="https://i.ibb.co/h2rxfvP/ceis.jpg"
                 alt=""
                 class="media-object"
                 style="border: 2px solid white"
@@ -84,6 +84,6 @@
     </div>
   </div>
   <div class="copyright text-center">
-    Copyright &copy; 2023 <span> NORA </span>
+    Copyright &copy; 2024 <span> NORA </span>
   </div>
 </footer>
