--- a/src/app/views/inicio/inicio.component.html
+++ b/src/app/views/inicio/inicio.component.html
@@ -1,19 +1,31 @@
 <div class="container">
-  <div class="w-100 d-flex">
+  <div class="w-100 d-flex justify-content-end">
     <h2 class="titulo">Inicio</h2>
   </div>
+
+  <hr />
 
   <div
     class="d-flex flex-column w-100 justify-content-center align-items-center"
   >
     <div
-      class="text-center w-100 d-flex align-items-center mb-3"
+      class="text-center w-100 d-flex align-items-center mb-3 flex-wrap"
       style="color: whitesmoke"
     >
-      <div class="w-50 text-white" [@enterState]>
-        <h1 style="font-size: 7rem">NORA</h1>
+      <div class="w-100 text-white" [@enterState]>
+        <img
+          class="besidenora"
+          src="https://i.ibb.co/q0rKzck/DSC-3055.jpg"
+          alt=""
+        />
+        <img src="https://i.ibb.co/wgkqJPj/NORA-Marca-BT.png" alt="" />
+        <img
+          class="besidenora"
+          src="https://i.ibb.co/2yBQCVF/DSC-3016.jpg"
+          alt=""
+        />
       </div>
-      <div class="w-50">
+      <div class="w-100">
         <h1 class="text-white" [@enterStateTwo]>Terapia basada en plantas</h1>
         <hr />
 
